# AITeacherAssistant

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_GUIDE.md  PERFORMANCE_ANALYSIS.md  QUICK_START_PERFORMANCE_FIX.md  Readme.md  SQL_OPTIMIZATION_QUERIES.sql  data_backup.sql  dependencies.py  logger.py  main.py  price_estimation.py  pyproject.toml  requirements.txt  routes_config.py  run.py  schema_backup.sql  settings.py  supabase_config.py  test_setup.py
admin/: dependencies.py  models.py  routes.py
ai/: __init__.py  generation.py  rag.py
auth/: __init__.py  models.py  routes.py  service.py
course/: __init__.py  routes.py
docs/: ADMIN_COURSE_CREATION.md  ADMIN_DELETE_FEATURE.md  ADMIN_FEATURE_FRONTEND_GUIDE.md  ADMIN_TEACHER_COURSE_ENDPOINTS.md  Local_Supabase_Setup.md  SYSTEM_API_REFERENCE.md  load_testing_hardening.md
document/: __init__.py  routes.py
email_template/: 01_email_header.html  02_email_footer.html  03_account_activation.html  04_welcome.html  05_enrollment_confirmation.html  06_new_lecture_published.html  07_new_assignment_individual.html  08_result_published.html  09_new_assignment_class.html  10_quiz_submitted.html  11_low_quiz_score.html  12_result_request.html  13_result_approved.html  14_result_rejected.html  15_quiz_deadline_reminder.html  16_quiz_published.html  17_student_enrolled.html  18_bulk_signup_activation.html  19_bulk_enrollment.html  20_deadline_extended.html
feedback/: routes.py
lecture/: __init__.py  routes.py
migrations/: 001_add_lecture_embeddings.sql  002_add_default_quiz.sql  002_backfill_course_codes.sql  003_add_flashcards.sql  003_rename_metadata_to_chunk_metadata.sql  004_add_lecture_plan.sql  005_add_document_id_to_lecture.sql  006_add_topic_and_lecture_number.sql  007_add_document_assignment.sql  add_admin_support.sql  add_chunk_type_to_search.sql  add_course_teacher_assignment.sql  add_feedback_attachments_bucket.sql  add_feedback_mechanism.sql  add_integer_primary_keys.sql  add_integer_primary_keys_complete.sql  add_notifications.sql  (+17 more)
(+82 files in other folders)
